--- a/war/ChineseTenGame.html
+++ b/war/ChineseTenGame.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Cheat game</title>
+    <title>ChineseTen Card Game</title>
     <script type="text/javascript" language="javascript" src="chineseTen_game/chineseTen_game.nocache.js"></script>
     <style>
   .imgContainer {
@@ -18,6 +18,6 @@
     </style>
   </head>
   <body>
-    <div id="mainDiv" width="400" height="400" ></div>
+    <div id="mainDiv" width="800" height="800" ></div>
   </body>
 </html>
