--- a/war/ChineseTenGame.html
+++ b/war/ChineseTenGame.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>ChineseTen Card Game</title>
     <script type="text/javascript" language="javascript" src="chineseTen_game/chineseTen_game.nocache.js"></script>
     <style>
