Make UI more user-friendly for mobile user

--- a/war/ChineseTenGame.html
+++ b/war/ChineseTenGame.html
@@ -13,12 +13,17 @@
   }
   .imgShortContainer {
     overflow:hidden;
+    width: 10px;
+    height: 97px;
+  }
+   .imgMiddleContainer {
+    overflow:hidden;
     width: 20px;
     height: 97px;
   }
     </style>
   </head>
   <body>
-    <div id="mainDiv" width="800" height="800" ></div>
+    <div id="mainDiv" width="500" height="800" ></div>
   </body>
 </html>
