--- a/war/ChineseTenGame.html
+++ b/war/ChineseTenGame.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="gwt:property" content="locale=en">
+    <!-- <meta name="gwt:property" content="locale=zh"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>ChineseTen Card Game</title>
