--- a/war/ChineseTenGame.html
+++ b/war/ChineseTenGame.html
@@ -7,6 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>ChineseTen Card Game</title>
+    <script type="text/javascript" src="//multiplayer-gaming.com/api.js?version=1"></script>
     <script type="text/javascript" language="javascript" src="chineseTen_game/chineseTen_game.nocache.js"></script>
     <style>
   .imgContainer {
